package src.strategies;

import src.characters.Character;

public interface Strategy {
    void execute(Character character);
} 